# sigmaris

./: .gitignore  2.url  README.md  README_ja.md  map.md  package-lock.json  package.json  vercel.json
backend/: .dockerignore  Dockerfile  env.example  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/routes/: __init__.py  agent.py  app_data.py  chat.py  google_tools.py  import_preview.py  mobility.py  orchestrator.py
backend/app/schemas/: google_tools.py  import_preview.py  mobility.py  orchestrator.py
backend/app/services/: abstention_feedback.py  active_inquiry.py  app_chat_data.py  app_data.py  app_event_data.py  app_profile_data.py  audit_log.py  bench_auth.py  bench_common.py  chat.py  (+118 more)
backend/eval/: testset.example.json
backend/scripts/: generate_capability_summaries.py  generate_eval_testset.py  review_diff_proposals.py  review_reply_drafts.py  run_categorized_x_post_check.py  run_code_diff_generation.py  run_cycle_health.py  run_eval.py  run_evidence_aggregation.py  run_grounding_health.py  run_hypothesis_generation.py  run_hypothesis_prioritization.py  run_locomo.py  run_longmemeval.py  run_migration_review_queue.py  run_sandbox_verification.py  run_static_verification.py  scan_capabilities.py  scan_safety_critical_files.py  seed_fact_memory.py
backend/shiftpilotai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_import_extraction.py  test_intent_routing.py  test_memory_snapshot.py  test_proactive_trigger.py  test_x_post_dispatch.py  test_x_post_opsec_filter.py  test_x_post_self_timing.py
(+491 files in other folders)
