[project]
name = "shiftpilotai-backend"
version = "0.1.0"
description = "FastAPI backend for ShiftPilotAI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "openai>=1.108.0",
  "supabase>=2.18.0",
  "google-auth>=2.40.0",
  "google-api-python-client>=2.179.0",
  "tzdata>=2025.2",
  "apscheduler>=3.10.0,<4.0",
  # FastAPIアプリ本体は使わないが、scripts/sigmaris_chat.py・
  # scripts/sigmaris_chat_v2.py(サーバー上でbackend/.venvを再利用する、
  # ターミナルチャットクライアント)が使う。以前はここに記載されず、
  # サーバー上で手動インストールされたのみだったため、venv再構築時に
  # 抜け落ちるリスクがあった(docs/sigmaris/cli_chat_investigation.md、
  # 1.4節)。
  "rich>=13.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
